# trisigma

./: .gitignore  setup.py
.github/: build.sh
docs/: domain.md  (+4 more)
lib/trisigma/: pyproject.toml
lib/trisigma/tests/data/: trading_port_messages.json
lib/trisigma/tests/mock/: brokerage_adapter.py  order_repository.py  portfolio_repository.py
lib/trisigma/tests/tester/usecase/: common.py  test_order_cancellation.py  test_order_modification.py  test_order_placement.py  test_portfolio_adjustment.py
lib/trisigma/tests/util/: __init__.py
lib/trisigma/trisigma/app/port/: __init__.py
lib/trisigma/trisigma/app/usecase/: get_active_bots.py  get_observations.py  get_open_orders.py  get_portfolio_key_stats.py  get_return_comparison.py  get_strategy_allocation.py  order_placement.py  order_status_update.py  portfolio_adjustment.py  update_strategy_allocation.py
lib/trisigma/trisigma/domain/brokerage/entity/: order.py
lib/trisigma/trisigma/domain/common/: __init__.py  modelfactory.py
lib/trisigma/trisigma/domain/trading/: base_strategy_behavior.py  base_strategy_executor.py  trader.py
lib/trisigma/trisigma/infra/adapter/: __init__.py  account_management_adapter_rabbit.py
lib/trisigma/trisigma/infra/common/: files.py
lib/trisigma/trisigma/infra/logger/: __init__.py
lib/trisigma/trisigma/infra/repository/: order_repository_mongo.py  portfolio_repository_mongo.py  trader_repository_mongo.py
lib/trisigma/trisigma/interface/driver/: algo_trading_engine.py  brokerage_middleware.py
lib/trisigma/trisigma/interface/view/: __init__.py  epa_comparison_chart.py
(+106 files in other folders)
