[project]
name = "trisigma" 
version = "1.0.0"
description = "Order Management System of Orchestrading Fund LLP"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Arda Gok", email = "ardagkmhs@gmail.com" }
]
maintainers = [
  {name = "Arda Gok", email = "ardagkmhs@gmail.com" }
]

dependencies = [
    "numpy==1.22.3",
    "pandas==1.4.3",
    "requests==2.28.1",
    "cachetools==5.2.0",
    "exchange-calendars==4.2.4",
    "python-dotenv==0.21.0",
    "timeago==1.0.16",
    "toml==0.10.2",
    "pymongo==4.2.0",
    "pymemcache==4.0.0",
    "websocket-client[optional]",
    "python-socks==2.3.0",
    "websocket-client==1.5.1",
    "websockets==10.3",
    "ib-insync==0.9.86",
    "bunny-storm==1.0.28",
    "binance-connector==3.3.0",
    "webull==0.6.1",
    "ibapi==9.81.1.post1",
    "pika==1.3.1",
    "schedule==1.1.0",
    "fredapi==0.5.1",
    "finta==1.3",
    "dash-bootstrap-components",
    "plotly",
    "pandas-stubs==1.4.4.220906",
    "fastapi==0.104.1",
    "jinja2"
]
[build-system]
requires = ["setuptools>=67.2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"tests.data" = ["*"]
